--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -33,7 +33,7 @@
 	--color-black-dark: #000;
 
 	/* Other */
-	--boder-radius: 0.8rem;
+	--border-radius: 0.7rem;
 }
 
 // Global Style
@@ -62,7 +62,7 @@
 			width: 21rem;
 			height: 3.401rem;
 			margin: 5.705rem 0 3.594rem;
-			border-radius: 0.8rem;
+			border-radius: var(--border-radius);
 			background-color: var(--color-white-light);
 
 			.search-button {
@@ -111,114 +111,211 @@
 
 // Styles for the Main Section
 .main {
-	&__wrap {
+	#notePage {
 		display: flex;
-	}
 
-	.sidebar {
-		position: relative;
-		height: 100vh;
-		width: 32.2rem;
-		padding-top: 4.8rem;
-		border: 0.1rem solid var(--color-gray03-light);
-		border-width: 0 1px;
-
-		&-toggle {
-			position: absolute;
-			right: -1.45rem;
-			top: 12.917rem;
-		}
-
-		&__title {
-			@include text-style(
-				$size: var(--font-size-13),
-				$line-height: 2rem,
-				$color: var(--color-accent-light)
-			);
-		}
-		.pinned {
-			padding-left: 2.8rem;
-			margin-bottom: 0.6rem;
-		}
-		.notes {
-			margin: 1.4rem 0 1.9rem;
-			padding: 1rem 0 0.8rem 2.8rem;
+		.sidebar {
+			position: relative;
+			height: 100vh;
+			width: 32.2rem;
+			padding-top: 4.8rem;
 			border: 0.1rem solid var(--color-gray03-light);
-			border-width: 1px 0;
-		}
-		&__top {
-			.notes-wrapper {
-				max-height: 21.3rem;
+			border-width: 0 1px;
+
+			&-toggle {
+				position: absolute;
+				right: -1.45rem;
+				top: 12.917rem;
 			}
-		}
-	}
 
-	.content {
-		min-width: 83rem;
-		height: 100vh;
-	}
-
-	.notes-wrapper {
-		max-height: 39rem;
-		overflow-y: auto;
-		@media (min-height: 848px) {
-			max-height: 59rem;
-		}
-
-		&::-webkit-scrollbar {
-			width: 0.5rem;
-			border-radius: 5px;
-		}
-		&::-webkit-scrollbar-track {
-			background: transparent;
-			border-top-right-radius: 5px;
-		}
-		&::-webkit-scrollbar-thumb {
-			background: var(--color-accent-light);
-			border-radius: 5px;
-		}
-		&::-webkit-scrollbar-thumb:hover {
-			background: var(--color-hover-light);
-		}
-
-		.note {
-			width: 29.8rem;
-			padding: 1.1rem 1.6rem 0.6rem;
-			margin: 0 auto 1rem;
-			font-size: var(--font-size-13);
-			color: var(--color-gray02-light);
-			border-radius: var(--boder-radius);
-
-			&-title {
+			&__title {
 				@include text-style(
-					$size: var(--font-size-16),
-					$line-height: 2.7rem,
-					$color: var(--color-primary-light)
+					$size: var(--font-size-13),
+					$line-height: 2rem,
+					$color: var(--color-accent-light)
 				);
-				margin-bottom: 0.3rem;
 			}
-			&-content {
-				margin-bottom: 1.6rem;
-				max-height: 5.1rem;
-				overflow: hidden;
+			.pinned {
+				padding-left: 2.8rem;
+				margin-bottom: 0.6rem;
 			}
-			&-footer {
-				display: flex;
-				justify-content: space-between;
-				.delete-button {
-					margin-right: 1.5rem;
-					color: var(--color-errors-light);
+			.notes {
+				margin: 1.4rem 0 1.9rem;
+				padding: 1rem 0 0.8rem 2.8rem;
+				border: 0.1rem solid var(--color-gray03-light);
+				border-width: 1px 0;
+			}
+			&__top {
+				.notes-wrapper {
+					max-height: 21.3rem;
 				}
 			}
 		}
 
-		.active-note .note-title {
-			font-size: var(--font-size-20);
-			line-height: 2rem;
+		.notes-wrapper {
+			max-height: 39rem;
+			overflow-y: auto;
+			@media (min-height: 848px) {
+				max-height: 59rem;
+			}
+
+			&::-webkit-scrollbar {
+				width: 0.5rem;
+				border-radius: 5px;
+			}
+			&::-webkit-scrollbar-track {
+				background: transparent;
+				border-top-right-radius: 5px;
+			}
+			&::-webkit-scrollbar-thumb {
+				background: var(--color-accent-light);
+				border-radius: 5px;
+			}
+			&::-webkit-scrollbar-thumb:hover {
+				background: var(--color-hover-light);
+			}
+
+			.note {
+				width: 29.8rem;
+				padding: 1.1rem 1.6rem 0.6rem;
+				margin: 0 auto 1rem;
+				font-size: var(--font-size-13);
+				color: var(--color-gray02-light);
+
+				&-title {
+					@include text-style(
+						$size: var(--font-size-16),
+						$line-height: 2.7rem,
+						$color: var(--color-primary-light)
+					);
+					margin-bottom: 0.3rem;
+				}
+				&-content {
+					margin-bottom: 1.6rem;
+					max-height: 5.1rem;
+					overflow: hidden;
+				}
+				&-footer {
+					display: flex;
+					justify-content: space-between;
+					.delete-button {
+						margin-right: 1.5rem;
+						color: var(--color-errors-light);
+					}
+				}
+			}
+
+			.active-note .note-title {
+				font-size: var(--font-size-20);
+				line-height: 2rem;
+			}
+
+			.pinned-note {
+				background-color: var(--color-gray04-light);
+			}
 		}
 
-		.pinned-note {
-			background-color: var(--color-gray04-light);
+		// Styles for the Content
+		.content {
+			min-width: 83rem;
+			height: 100vh;
+
+			&-wrap {
+				position: relative;
+				margin: 11.4rem 15.3rem 0 9.9rem;
+
+				.note {
+					&-title {
+						@include text-style(
+							$size: var(--font-size-26),
+							$line-height: 3.1rem,
+							$color: var(--color-primary-light)
+						);
+						margin-bottom: 1.2rem;
+					}
+					&-date {
+						font-size: var(--font-size-13);
+						color: var(--color-gray02-light);
+						margin-bottom: 3.9rem;
+					}
+					&-content {
+						width: 100%;
+						text-align: justify;
+						@include text-style(
+							$size: var(--font-size-16),
+							$line-height: 2.7rem,
+							$color: var(--color-primary-light)
+						);
+					}
+				}
+
+				.add-icon {
+					position: absolute;
+					right: -9.1rem;
+					bottom: -2.533rem;
+					width: 65px;
+					height: 65px;
+					border-radius: 50%;
+					background: url(../images/add-icon.svg) no-repeat;
+					background-position: -25px -16px;
+				}
+			}
+		}
+	}
+
+	#addPage {
+		padding: 11.4rem 37.9rem 23.8rem 20.3rem;
+		.add__page {
+			padding-right: 10rem;
+
+			.note-title {
+				@include text-style(
+					$size: var(--font-size-26),
+					$line-height: 3.1rem,
+					$color: var(--color-primary-light)
+				);
+				margin-bottom: 3.6rem;
+			}
+
+			form label {
+				@include text-style(
+					$size: var(--font-size-13),
+					$line-height: 2rem,
+					$color: var(--color-gray02-light)
+				);
+			}
+
+			form input,
+			textarea {
+				width: 50rem;
+				height: 4.5rem;
+				margin: 0.6rem 0 3.9rem;
+				padding: 1rem;
+				border-radius: var(--border-radius);
+				background-color: var(--color-gray04-light);
+			}
+			textarea,
+			textarea:active,
+			textarea:hover,
+			textarea:focus {
+				height: 15rem;
+				margin-bottom: 4.8rem;
+			}
+
+			button {
+				@include text-style(
+					$size: var(--font-size-13),
+					$line-height: 2rem,
+					$color: var(--color-white-light)
+				);
+				padding: 1rem 2.2rem;
+				border-radius: 0.5rem;
+				background-color: var(--color-accent-light);
+
+				&:not(:nth-child(2)) {
+					margin-right: 2.7rem;
+				}
+			}
 		}
 	}
 }
