--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -24,3 +24,31 @@
 	font-weight: $weight;
 	color: $color;
 }
+
+@mixin dynamicHeight($minHeight, $maxHeight, $percentage) {
+	@media (min-height: #{$minHeight}) and (max-height: #{$maxHeight}) {
+		max-height: $percentage !important;
+	}
+}
+
+@mixin customScrollbar {
+	&::-webkit-scrollbar {
+		width: 1rem;
+		border-radius: 5px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background: transparent;
+		border-top-right-radius: 5px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		border: 2px solid var(--color-white-light);
+		border-radius: 5px;
+		background: var(--color-accent-light);
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
+		background: var(--color-hover-light);
+	}
+}
