--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -136,6 +136,9 @@
 			margin-top: 41px;
 		}
 	}
+	.close-sidebar-icon {
+		display: none;
+	}
 	&__links {
 		display: flex;
 		flex-direction: column;
@@ -172,6 +175,8 @@
 	height: 100%;
 	width: 100%;
 	&__wrap {
+		height: 100%;
+		width: 100%;
 		.active-page {
 			display: block;
 		}
@@ -179,6 +184,7 @@
 			position: relative;
 			height: 100%;
 			width: 100%;
+			overflow: auto;
 			display: none;
 			&.active-page {
 				display: flex;
@@ -200,7 +206,8 @@
 
 			.sidebar {
 				position: relative;
-				height: 100%;
+				display: grid;
+				grid-template-rows: auto 1fr;
 				min-width: 32.2rem;
 				padding-top: 4.8rem;
 				border-right: 0.1rem solid var(--color-gray03-light);
@@ -240,29 +247,23 @@
 						}
 					}
 				}
+				&__bottom {
+					overflow-y: auto;
+					.notes-wrapper {
+						max-height: 88%;
+						// I will be back to replace this with absolute notes h2 element and delete all of this rules 🤪
+						@include dynamicHeight(992px, 2000px, 90%);
+						@include dynamicHeight(990px, 1115px, 88%);
+						@include dynamicHeight(400px, 992px, 76%);
+						@include dynamicHeight(400px, 590px, 70%);
+						@include dynamicHeight(300px, 530px, 65%);
+					}
+				}
 			}
 
 			.notes-wrapper {
-				max-height: 39rem;
 				overflow-y: auto;
-				@media (min-height: 848px) {
-					max-height: 59rem;
-				}
-				&::-webkit-scrollbar {
-					width: 0.5rem;
-					border-radius: 5px;
-				}
-				&::-webkit-scrollbar-track {
-					background: transparent;
-					border-top-right-radius: 5px;
-				}
-				&::-webkit-scrollbar-thumb {
-					background: var(--color-accent-light);
-					border-radius: 5px;
-				}
-				&::-webkit-scrollbar-thumb:hover {
-					background: var(--color-hover-light);
-				}
+				@include customScrollbar;
 				.note {
 					width: 29.8rem;
 					padding: 1.1rem 1.6rem 0.6rem;
@@ -316,21 +317,7 @@
 					.content__note-wrap {
 						max-height: 70vh;
 						overflow-y: auto;
-						&::-webkit-scrollbar {
-							width: 0.5rem;
-							border-radius: 5px;
-						}
-						&::-webkit-scrollbar-track {
-							background: transparent;
-							border-top-right-radius: 5px;
-						}
-						&::-webkit-scrollbar-thumb {
-							background: var(--color-accent-light);
-							border-radius: 5px;
-						}
-						&::-webkit-scrollbar-thumb:hover {
-							background: var(--color-hover-light);
-						}
+						@include customScrollbar;
 						.note {
 							&-title {
 								@include text-style(
@@ -374,7 +361,15 @@
 			display: none;
 			height: 100%;
 			width: 100%;
+			overflow-y: auto;
+			@include customScrollbar;
 			padding: 11.4rem 37.9rem 23.8rem 20.3rem;
+
+			// Adjust padding to resolve overflow issue
+			@media (min-width: 992px) and (max-width: 1430px) {
+				padding: 10rem 2rem 5rem 12rem;
+			}
+
 			&.active-page {
 				display: block;
 			}
@@ -394,7 +389,7 @@
 					#confirmation-message {
 						position: absolute;
 						display: none;
-						width: 100%;
+						width: 50rem;
 						color: green;
 						user-select: none;
 						text-align: center;
@@ -524,6 +519,7 @@
 	}
 
 	.container {
+		overflow: auto;
 		#mobile-header {
 			position: fixed;
 			display: block;
@@ -556,6 +552,9 @@
 				margin: 3.3rem 1px 0;
 				background-color: var(--color-white-light);
 				animation: fadeInMoveDown 0.6s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+				.search-input {
+					width: 90%;
+				}
 			}
 			@keyframes fadeInMoveDown {
 				0% {
@@ -572,18 +571,25 @@
 		// Aside linkes - on mobile
 		.aside {
 			display: none;
+			padding-left: 0;
+			.close-sidebar-icon {
+				display: block;
+				margin: 2.1rem 0 4.2rem 1.536rem;
+			}
+			&__links {
+				margin-left: 1.536rem;
+			}
 		}
 
 		.main {
 			.main__wrap {
 				#notesPage {
+					// Notes page - on mobile
 					.sidebar {
 						// Forget that there is something called Toggle on mobile, Ahmad
 						.sidebar-toggle .sidebar-toggle__icon {
 							display: none;
 						}
-						// Notes page - on mobile
-						display: none;
 						width: 100%;
 						padding: 0;
 						margin-top: 9.4rem;
@@ -600,6 +606,15 @@
 							.note {
 								width: 100%;
 								padding: 0.9rem 1.1rem 1.1rem;
+							}
+						}
+						&__bottom {
+							overflow-y: auto;
+							.notes-wrapper {
+								max-height: 76%;
+								@media (min-height: 400) {
+									max-height: 90%;
+								}
 							}
 						}
 					}
@@ -622,20 +637,17 @@
 				}
 				// Add page - on mobile
 				#addPage {
-					// display: none;
 					padding: 0;
 					& .add__page {
 						padding: 9.7rem 1.6rem 3rem;
 						form input,
-						textarea {
+						textarea,
+						#confirmation-message {
 							width: 100%;
 						}
 						.buttons-wrap {
 							display: flex;
 							justify-content: space-between;
-							button:not(:nth-child(2)) {
-								margin-right: 0;
-							}
 						}
 					}
 				}
