--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -184,7 +184,6 @@
 			position: relative;
 			height: 100%;
 			width: 100%;
-			overflow: auto;
 			display: none;
 			&.active-page {
 				display: flex;
@@ -206,8 +205,10 @@
 
 			.sidebar {
 				position: relative;
+				height: 100%;
 				display: grid;
 				grid-template-rows: auto 1fr;
+				grid-template-columns: 1fr;
 				min-width: 32.2rem;
 				padding-top: 4.8rem;
 				border-right: 0.1rem solid var(--color-gray03-light);
@@ -239,6 +240,7 @@
 					border-width: 1px 0;
 				}
 				&__top {
+					overflow: auto;
 					.notes-wrapper {
 						max-height: 21.3rem;
 						/* Override pinned-note class when added with JavaScript */
@@ -248,15 +250,17 @@
 					}
 				}
 				&__bottom {
+					grid-row: 2;
 					overflow-y: auto;
 					.notes-wrapper {
 						max-height: 88%;
 						// I will be back to replace this with absolute notes h2 element and delete all of this rules 🤪
-						@include dynamicHeight(992px, 2000px, 90%);
-						@include dynamicHeight(990px, 1115px, 88%);
-						@include dynamicHeight(400px, 992px, 76%);
-						@include dynamicHeight(400px, 590px, 70%);
-						@include dynamicHeight(300px, 530px, 65%);
+						@include dynamicHeight(1050px, 1200px, 88%);
+						@include dynamicHeight(925px, 1049, 85%);
+						@include dynamicHeight(700px, 924px, 82%);
+						@include dynamicHeight(630px, 700px, 78%);
+						@include dynamicHeight(580px, 629px, 75%);
+						@include dynamicHeight(540px, 579px, 70%);
 					}
 				}
 			}
@@ -310,6 +314,7 @@
 			// Styles for the Content
 			.content {
 				width: 100%;
+				overflow: auto;
 				word-break: break-word;
 				&-wrap {
 					position: relative;
@@ -455,6 +460,7 @@
 					margin-bottom: 4.8rem;
 					resize: none;
 					line-height: 1.5;
+					@include customScrollbar;
 				}
 				button {
 					@include text-style(
@@ -592,7 +598,8 @@
 						}
 						width: 100%;
 						padding: 0;
-						margin-top: 9.4rem;
+						padding-top: 9.4rem;
+						margin-top: 0;
 						.pinned {
 							padding-left: 2.7rem;
 							margin-bottom: 0.5rem;
@@ -606,6 +613,11 @@
 							.note {
 								width: 100%;
 								padding: 0.9rem 1.1rem 1.1rem;
+							}
+						}
+						&__top {
+							.notes-wrapper {
+								max-height: 14.7rem;
 							}
 						}
 						&__bottom {
